--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -1,29 +1,29 @@
 Network Data Ingestion and Transformation
 
+A data collection server, shown in the diagram below, is collecting data in real time from the local network. The data collected by the Server is working with a Client residing in DLP to transfer the network data collected through Kafka. Using Kafka socket code, we are making a connection to the client and capture the network data and send it to a Kafka topic created. From this topic, data will be moved to HDFS by a Consumer program. With the data present in HDFS, we can then further transform it, view it before and after the transformation in different charts such as pie chart, bar chart etc. using Tableau. The diagram shows how exactly network data flows from a local network through Kafka in HDFS and gets transformed.
+
+
 # Objective
 
-Provides a description of the objective of the lab.
+*	Show how to get network data from the HDFS.
+*	Learn to transform network data by a given transform function.
+*	Learn how to save a file to HDFS.
 
 Completion time: 30 minutes
 
 # Prerequisites
 
-Describe any Prerequisites here
+*	Knowledge on Hadoop to store the network data.
+*	Studied platform user guide.
+*	Basic knowledge of how spark works.
 
-# Content area 1
+# Step 1: Explore the DLP Dev Center
 
-Content goes here
+(Add Link to DLP here)
 
-# Content area 2
+1. Go to Data Repository to browse data source
+1. Go to the development area by clicking Development Hub.
+1. Then create a new workspace as per the options available. whether you need Spark Java or Spark Scala, etc. (select Spark Java)
+1. Select the workspace you created, Launch IDE by clicking the Launch link.
 
-Content goes here
-
-Image example: ![alternate text](/posts/files / sample - lab / assets / images / cisco - live.jpg)
-
-``
-`python
-  import sys
-  
-  print("hello world")
-`
-``
+![Terminal](/posts/files/data-dev-learning-labs/assets/images/ide1.png)
