--- a/labs/net-data-ingest-trans/2.md
+++ b/labs/net-data-ingest-trans/2.md
@@ -1,14 +1,20 @@
-#
-Content area 3
+# Step 2: Developing code in IDE
+1. Go to Workspace to put your code (sample code in code-section) here.
+1. Compile and build it. Click run button, then check the build result.
+1. Run your code.
 
-Content goes here
+Click on the Terminal button to run a shell environment.
+![Terminal](/posts/files/data-dev-learning-labs/assets/images/ide2.png)
 
-Image example: ![alternate text](/posts/files / sample - lab / assets / images / cisco - live.jpg)
+1. cd target to view the package
+1. Enter the command below to run your job
 
-``
-`python
-  import sys
+`HADOOP_USER_NAME=dev_1 spark-submit –master yarn –deploy-mode cluster –class TransformData /projects/spark-transform/target/transform-0.0.1-SNAPSHOT-jar-with-depencies.jar parameter1 parameter2 parameter3`
 
-  print("hello world")
-`
-``
+`parameter1`: the data file on the hdfs we need to transform.
+`parameter2`: the path of the output; a folder will be created automatically after the job is done.
+`parameter3`: the name of the output file.
+
+Example:
+
+![Example](/posts/files/data-dev-learning-labs/assets/images/output1.png)
