--- a/labs/vizualize-csv-tableau/1.md
+++ b/labs/vizualize-csv-tableau/1.md
@@ -1,20 +1,27 @@
-Visualizing CSV with Tableau
+# Visualizing CSV with Tableau
 
-# Objective
+## Objective
 
-Provides a description of the objective of the lab.
+Tableau is a powerful business intelligence and analytics tool. In this Learning Lab, you will learn how to import a csv file into Data Learning Platform and visualize it with Tableau. 
+
+After you complete this lab, you'll understand how to perform the following tasks:
+- Get data from a csv file
+- Explore data with the Tableau server
+- Import network data from local machine and analyze how many UDP and ICMP packages have been received in each second
+
 
 Completion time: 30 minutes
 
-# Prerequisites
+<!--
+## Prerequisites
 
 Describe any Prerequisites here
 
-# Content area 1
+## Content area 1
 
 Content goes here
 
-# Content area 2
+## Content area 2
 
 Content goes here
 
@@ -27,3 +34,4 @@ Image example: ![alternate text](/posts/files / sample - lab / assets / images /
   print("hello world")
 `
 ``
+-->
