--- a/labs/vizualize-csv-tableau/1.md
+++ b/labs/vizualize-csv-tableau/1.md
@@ -12,11 +12,15 @@ After you complete this lab, you'll understand how to perform the following task
 
 Completion time: 30 minutes
 
-<!--
+
 ## Prerequisites
 
-Describe any Prerequisites here
+- Tableau server explores .csv (comma separated values) files only
+- Use commas to separate individual fields in the .csv file
+- The .csv file must have a header line that names each column of the data
+- The .csv file must be smaller than 50MB
 
+<!--
 ## Content area 1
 
 Content goes here
