add placeholder for link to DLP

--- a/labs/vizualize-csv-tableau/1.md
+++ b/labs/vizualize-csv-tableau/1.md
@@ -20,6 +20,7 @@ Completion time: 30 minutes
 - The .csv file must have a header line that names each column of the data
 - The .csv file must be smaller than 50MB
 
+## (Link to DLP here)
 <!--
 ## Content area 1
 
