--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -1,6 +1,6 @@
-Network Data Ingestion and Transformation
+# Network Data Ingestion and Transformation
 
-A data collection server, shown in the diagram below, is collecting data in real time from the local network. The data collected by the Server is working with a Client residing in DLP to transfer the network data collected through Kafka. Using Kafka socket code, we are making a connection to the client and capture the network data and send it to a Kafka topic created. From this topic, data will be moved to HDFS by a Consumer program. With the data present in HDFS, we can then further transform it, view it before and after the transformation in different charts such as pie chart, bar chart etc. using Tableau. The diagram shows how exactly network data flows from a local network through Kafka in HDFS and gets transformed.
+In this Learning Lab, you will learn about how to ingest network data and transform it.  The scenario emulated is as follows.  A data collection server collects data in real time from the local network. The data collected by the server is working with a client residing in Data Learning Platform (DLP) to transfer the network data collected through Kafka. Using Kafka socket code, we are making a connection to the client and capture the network data and send it to a Kafka topic created. From this topic, data will be moved to HDFS by a consumer program. With the data present in HDFS, we can then further transform it, view it before and after the transformation in different charts such as pie chart, bar chart etc. using Tableau. The diagram shows how exactly network data flows from a local network through Kafka in HDFS and gets transformed.
 
 
 # Objective
@@ -19,7 +19,7 @@ Completion time: 30 minutes
 
 # Step 1: Explore the DLP Dev Center
 
-(Add Link to DLP here)
+TODO (Add Link to DLP here)
 
 1. Go to Data Repository to browse data source
 1. Go to the development area by clicking Development Hub.
