--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -1,57 +1,144 @@
 #<center>How to Develop a Stream Handler for Cisco CSA</center>
 
 
-##Lab OverviewIn this Learning Lab, you will learn how to develop CSA custom handlers and use of CSA in our Devnet platform.<br>Our platform has Kafka messaging framework in the backend. This utility will take the IP, Port and the Topic details of Kafka messaging system. The application will listen to a local socket continuously and will push the stream from this socket to the Kafka. Now we need to write simple Java code for handling the log data stream and need to configure it in the XML configuration file.
+##Lab Overview
 
-![Figure](csa.jpg)
+In this Learning Lab, you will learn how to develop CSA custom handlers and use of CSA in our Devnet platform.<br>
+Our platform has Kafka messaging framework in the backend. This utility will take the IP, Port and the Topic details of Kafka messaging system. The application will listen to a local socket continuously and will push the stream from this socket to the Kafka. Now we need to write simple Java code for handling the log data stream and need to configure it in the XML configuration file.
 
-##Lab Objective
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/csa.jpg)
+
+
+##Lab Objective
 
 * Building custom handler for CSA in Devnet Platform and analyze the data run time. 
 
 ##Prerequisites
 
-* knowledge on Java 1.6 or above.* knowledge on SQL query.* knowledge using GitHub.* Basic knowledge on XML.#### Now we are going to demo for a web server log Analysis step by step.<font color='red'>(Add link to DLP here) </font>
+* knowledge on Java 1.6 or above.
+* knowledge on SQL query.
+* knowledge using GitHub.
+* Basic knowledge on XML.
 
-<b>Step 1:</b> Create a workspace for writing the customize handler code for CSA.
-![Figure](step1.jpg)
 
-<b>Step2:</b> Select Cisco CSA template with any name you like and create.![Figure](step2.jpg)
+#### Now we are going to demo for a web server log Analysis step by step.
 
-<b>Step 3:</b> Now the workspace already created for Cisco CSA, now launch the IDE to develop the handler code.![Figure](step3.jpg)
 
-<b>Step 4:</b> Change the configuration in “include-handler.xml” file. Location is <b>CsaCustomHandler-->build-->temp-->include-handler.xml</b>the IDE to develop the handler code.![Figure](step4.jpg)
+<font color='red'>(Add link to DLP here) </font>
+
+
+<b>Step 1:</b> Create a workspace for writing the customize handler code for CSA.
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step1.jpg)
+
+
+<b>Step2:</b> Select Cisco CSA template with any name you like and create.
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step2.jpg)
+
+<b>Step 3:</b> Now the workspace already created for Cisco CSA, now launch the IDE to develop the handler code.
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step3.jpg)
+
+<b>Step 4:</b> Change the configuration in “include-handler.xml” file. Location is <b>CsaCustomHandler-->build-->temp-->include-handler.xml</b>
+the IDE to develop the handler code.
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step4.jpg)
 
 <b>Step 5:</b> In the “include-handler.xml” file set the kafka Topic and Kafka Zookeeper IP and Port.<br>
-<font color='#e6ac00'>\<topic>CiscoDDP\</topic> </font>    // Change the Kafka Topic here.
-<font color='#e6ac00'>\<arguments></font><br><font color='#e6ac00'>\<arg name="</font>zookeeper.connect">172.16.11.10:2181/kafka<font color='#e6ac00'></arg></font>  //Configure IP & Port <br><font color='#e6ac00'>\</arguments></font><br><font color='#e6ac00'>\<custom class=</font>"custom.handlers.ETLHandler” <font color='#e6ac00'></custom></font>        //Set the Handler Java Class which we are going to code next step<b>Step 6 :</b> We have create the custom Java Class in src folder. Here we named ETLHandler.<b>CsaCustomHandler --> customizations --> src --> ETLHandler.java </b><b><u>Sample Coding Exercise</u></b><br>
+
+<font color='#e6ac00'>\<topic>CiscoDDP\</topic> </font>    // Change the Kafka Topic here.
+
+<font color='#e6ac00'>\<arguments></font><br>
+<font color='#e6ac00'>\<arg name="</font>zookeeper.connect">172.16.11.10:2181/kafka<font color='#e6ac00'></arg></font>  //Configure IP & Port <br>
+<font color='#e6ac00'>\</arguments></font><br>
+<font color='#e6ac00'>\<custom class=</font>"custom.handlers.ETLHandler” <font color='#e6ac00'></custom></font>        //Set the Handler Java Class which we are going to code next step
+
+<b>Step 6 :</b> We have create the custom Java Class in src folder. Here we named ETLHandler.<b>CsaCustomHandler --> customizations --> src --> ETLHandler.java </b>
+
+<b><u>Sample Coding Exercise</u></b><br>
 
 ```
-package custom.handlers;import org.apache.commons.configuration.SubnodeConfiguration;import com.cisco.pa.handlers.model.DataRecord;import com.truviso.system.handlers.AbstractEntryHanlder;import com.truviso.system.handlers.HandlerException;public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {	String string;	public ETLHandler(SubnodeConfiguration c) {		super(c);	}	@Override	public void init() throws HandlerException {		super.init();        try {        	string = config.getString("string", "POST");               } catch (IllegalArgumentException e) {}	}	@Override	public void handle(DataRecord record) throws HandlerException {		try {			if (null != record) {				if (record.toString().contains(string))					resultListener.handle(record);			}		      } catch (Exception ex) {throw new HandlerException(ex);}}}
-```
-<b>Step 7:</b> In this step we need to stop the handler first. In the top of the IDE we can select stop from the combo.<br>![Figure](step7.jpg)
+package custom.handlers;
 
-<b>Step 8:</b> In this step we need to build our handler. In the top of the IDE we can select stop from the combo.<br> ![Figure](step8.jpg)
-<b>Step 9:</b> In this step we need to Start our handler to select Run. In the top of the IDE we can select stop from the combo. <br>![Figure](step9.jpg)
+import org.apache.commons.configuration.SubnodeConfiguration;
+import com.cisco.pa.handlers.model.DataRecord;
+import com.truviso.system.handlers.AbstractEntryHanlder;
+import com.truviso.system.handlers.HandlerException;
+
+public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {
+	String string;
+	public ETLHandler(SubnodeConfiguration c) {
+		super(c);
+	}
+	@Override
+	public void init() throws HandlerException {
+		super.init();
+        try {
+        	string = config.getString("string", "POST");
+               } catch (IllegalArgumentException e) {}
+	}
+	@Override
+	public void handle(DataRecord record) throws HandlerException {
+
+		try {
+			if (null != record) {
+				if (record.toString().contains(string))
+					resultListener.handle(record);
+			}
+
+		      } catch (Exception ex) {throw new HandlerException(ex);}}}
+```
+
+<b>Step 7:</b> In this step we need to stop the handler first. In the top of the IDE we can select stop from the combo.<br>
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step7.jpg)
+
+<b>Step 8:</b> In this step we need to build our handler. In the top of the IDE we can select stop from the combo.<br> 
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step8.jpg)
+
+<b>Step 9:</b> In this step we need to Start our handler to select Run. In the top of the IDE we can select stop from the combo. <br>
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step9.jpg)
 
 <b>Step 10:</b> Now we need to go to the DDP platform open App Stack Hub option and create a stack.<br>
-![Figure](step10.jpg)
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step10.jpg)
 
 <b>Step 11:</b> After creating the stack drag and drop the Log simulator and Trucq source library.<br>
-![Figure](step11.jpg)
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step11.jpg)
 
-<b>Step 12:</b> Now configure the Kafka topic in log simulator and Trucq Is a Database or Real-time Engine of CSA.<br>![Figure](step12.jpg)
+<b>Step 12:</b> Now configure the Kafka topic in log simulator and Trucq Is a Database or Real-time Engine of CSA.<br>
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step12.jpg)
 
 <b>Step 13:</b> Now we need to start both of this micro service.<br>
-![Figure](step13.jpg)
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step13.jpg)
 
 <b>Step 14:</b> After starting the micro services we need to start Zeppelin for visualization. In the Data Repository we will get the </>Drill button.<br>
-![Figure](step14.jpg)<b>Step 15:</b> Now we need to configure Zeppelin. When the Trucq micro service is running, we need to collect the IP and Port from the End Point.<br>
-![Figure](step15.jpg)
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step14.jpg)
 
-Now we need to create a new Zeppelin Note for CSA and edit the PSQL configuration with below mentioned parameters.<br>postgresql.driver.name   :  org.postgresql.Driverpostgresql.max.result    :  1000postgresql.password	     : postgresql.url		     :  jdbc:postgresql://10.75.161.55:1505/cqdbpostgresql.user	         : trucq![Figure](step15_1.jpg)
+<b>Step 15:</b> Now we need to configure Zeppelin. When the Trucq micro service is running, we need to collect the IP and Port from the End Point.<br>
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step15.jpg)
 
-<b>Step 16:</b> After restarting the configuration we can execute the SQL queries to the CSA engine and plot the graph according to data stream.![Figure](step16.jpg)
+Now we need to create a new Zeppelin Note for CSA and edit the PSQL configuration with below mentioned parameters.<br>
+
+postgresql.driver.name   :  org.postgresql.Driver
+postgresql.max.result    :  1000
+postgresql.password	     : 
+postgresql.url		     :  jdbc:postgresql://10.75.161.55:1505/cqdb
+postgresql.user	         : trucq
+
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step15_1.jpg)
+
+<b>Step 16:</b> After restarting the configuration we can execute the SQL queries to the CSA engine and plot the graph according to data stream.
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step16.jpg)
 
 
-###Things to TryDevelopers can build their own application for the Run Time Visualization, CSA engine or Trucq support Restful web services and also support SQL queries to fetch the data from the Engine.###Reference:1.	 [http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics-aag.pdf](http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics-aag.pdf)2.	[http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics.pdf](http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics.pdf)##<center>Thank You</center>
+###Things to Try
+
+Developers can build their own application for the Run Time Visualization, CSA engine or Trucq support Restful web services and also support SQL queries to fetch the data from the Engine.
+
+###Reference:
+1.	 [http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics-aag.pdf](http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics-aag.pdf)
+
+2.	[http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics.pdf](http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics.pdf)
+
+
+
+##<center>Thank You</center>
+
+
+
