--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -1,7 +1,7 @@
-#<center>How to Develop a Stream Handler for Cisco CSA</center>
+# <center>How to Develop a Stream Handler for Cisco CSA</center>
 
 
-##Lab Overview
+## Lab Overview
 
 In this Learning Lab, you will learn how to develop CSA custom handlers and use of CSA in our Devnet platform.<br>
 Our platform has Kafka messaging framework in the backend. This utility will take the IP, Port and the Topic details of Kafka messaging system. The application will listen to a local socket continuously and will push the stream from this socket to the Kafka. Now we need to write simple Java code for handling the log data stream and need to configure it in the XML configuration file.
@@ -9,11 +9,11 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/csa.jpg)
 
 
-##Lab Objective
+## Lab Objective
 
 * Building custom handler for CSA in Devnet Platform and analyze the data run time. 
 
-##Prerequisites
+## Prerequisites
 
 * knowledge on Java 1.6 or above.
 * knowledge on SQL query.
@@ -21,7 +21,7 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 * Basic knowledge on XML.
 
 
-#### Now we are going to demo for a web server log Analysis step by step.
+### Now we are going to demo for a web server log Analysis step by step.
 
 
 <font color='red'>(Add link to DLP here) </font>
@@ -38,23 +38,21 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step3.jpg)
 
 <b>Step 4:</b> Change the configuration in “include-handler.xml” file. Location is <b>CsaCustomHandler-->build-->temp-->include-handler.xml</b>
-the IDE to develop the handler code.
+the IDE to develop the handler code.<br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step4.jpg)
 
 <b>Step 5:</b> In the “include-handler.xml” file set the kafka Topic and Kafka Zookeeper IP and Port.<br>
 
-<font color='#e6ac00'>\<topic>CiscoDDP\</topic> </font>    // Change the Kafka Topic here.
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/imagesstep5.jpg)
 
-<font color='#e6ac00'>\<arguments></font><br>
-<font color='#e6ac00'>\<arg name="</font>zookeeper.connect">172.16.11.10:2181/kafka<font color='#e6ac00'></arg></font>  //Configure IP & Port <br>
-<font color='#e6ac00'>\</arguments></font><br>
-<font color='#e6ac00'>\<custom class=</font>"custom.handlers.ETLHandler” <font color='#e6ac00'></custom></font>        //Set the Handler Java Class which we are going to code next step
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/imagesstep5_1.jpg)
+
 
 <b>Step 6 :</b> We have create the custom Java Class in src folder. Here we named ETLHandler.<b>CsaCustomHandler --> customizations --> src --> ETLHandler.java </b>
 
 <b><u>Sample Coding Exercise</u></b><br>
 
-```
+```code
 package custom.handlers;
 
 import org.apache.commons.configuration.SubnodeConfiguration;
@@ -127,18 +125,18 @@ postgresql.user	         : trucq
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step16.jpg)
 
 
-###Things to Try
+### Things to Try
 
 Developers can build their own application for the Run Time Visualization, CSA engine or Trucq support Restful web services and also support SQL queries to fetch the data from the Engine.
 
-###Reference:
+### Reference:
 1.	 [http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics-aag.pdf](http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics-aag.pdf)
 
 2.	[http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics.pdf](http://www.cisco.com/c/dam/en/us/products/collateral/analytics-automation-software/streaming-analytics/connected-streaming-analytics.pdf)
 
 
 
-##<center>Thank You</center>
+## <center>Thank You</center>
 
 
 
