unescape underscores in first image path

--- a/labs/vizualize-csv-tableau/2.md
+++ b/labs/vizualize-csv-tableau/2.md
@@ -14,7 +14,7 @@
 8. Click the **Import** button.
 9. Your data appears in the data repository.
 
-![Importing the CSV File] (/posts/files/vizualize-csv-tableau/assets/images/import\_data\_dialog.png)
+![Importing the CSV File] (/posts/files/vizualize-csv-tableau/assets/images/import_data_dialog.png)
 
 **Step 2.** Select the data and then click the **Visualize** button
 
