update according to revised doc

--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -24,8 +24,6 @@ Our platform has Kafka messaging framework in the backend. This utility will tak
 ### Now we are going to demo for a web server log Analysis step by step.
 
 
-<font color='red'>(Add link to DLP here) </font>
-
 
 <b>Step 1:</b> Create a workspace for writing the customize handler code for CSA.
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step1.jpg)
@@ -84,45 +82,52 @@ public class ETLHandler extends AbstractEntryHanlder<DataRecord, DataRecord> {
 		      } catch (Exception ex) {throw new HandlerException(ex);}}}
 ```
 
-<b>Step 7:</b> In this step we need to stop the handler first. In the top of the IDE we can select stop from the combo.<br>
+<b>Step 7:</b> Now we need to go to the DLP platform open App Stack Hub option and create a stack.<br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step7.jpg)
 
-<b>Step 8:</b> In this step we need to build our handler. In the top of the IDE we can select stop from the combo.<br> 
+<b>Step 8:</b> After creating the stack drag and drop the Log simulator and Trucq source library.<br> 
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step8.jpg)
 
-<b>Step 9:</b> In this step we need to Start our handler to select Run. In the top of the IDE we can select stop from the combo. <br>
+<b>Step 9:</b> Now configure the Kafka topic in log simulator and Trucq Is a Database or Real-time Engine of CSA.<br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step9.jpg)
 
-<b>Step 10:</b> Now we need to go to the DDP platform open App Stack Hub option and create a stack.<br>
+<b>Step 10:</b> Now we need to start both of this micro service..<br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step10.jpg)
 
-<b>Step 11:</b> After creating the stack drag and drop the Log simulator and Trucq source library.<br>
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step11.jpg)
+<b>Step 11:</b> After running Trucq, we will get IP and 2 port. The First IP and port for Rest API and the second IP and port is for SQL query those will vary in every startup.<br>
+For example:<br>
 
-<b>Step 12:</b> Now configure the Kafka topic in log simulator and Trucq Is a Database or Real-time Engine of CSA.<br>
+```
+     10.75.161.55:1504      // 1504 is the Http Rest API listener Port      10.75.161.55:1505	    // 1505 is the SQL query Listener Port```
+
+<b>Step 12:</b> Now we need to configure the Trucq IP and Port is our custom handler. So we need to update the configuration file.<br>
+
+<b>CsaCustomHandler-->customizations-->instances-->local-runtime.properties</b><br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step12.jpg)
 
-<b>Step 13:</b> Now we need to start both of this micro service.<br>
+<b>Step 13:</b>In this step we need to stop the handler first. In the top of the IDE we can select stop from the combo. <br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step13.jpg)
 
-<b>Step 14:</b> After starting the micro services we need to start Zeppelin for visualization. In the Data Repository we will get the </>Drill button.<br>
+<b>Step 14:</b>In this step we need to build our handler. In the top of the IDE we can select build from the combo.<br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step14.jpg)
 
-<b>Step 15:</b> Now we need to configure Zeppelin. When the Trucq micro service is running, we need to collect the IP and Port from the End Point.<br>
+<b>Step 15:</b>In this step we need to Start our handler to select Run. In the top of the IDE we can select run from the combo.<br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step15.jpg)
 
-Now we need to create a new Zeppelin Note for CSA and edit the PSQL configuration with below mentioned parameters.<br>
 
-postgresql.driver.name   :  org.postgresql.Driver
-postgresql.max.result    :  1000
-postgresql.password	     : 
-postgresql.url		     :  jdbc:postgresql://10.75.161.55:1505/cqdb
-postgresql.user	         : trucq
-
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step15_1.jpg)
-
-<b>Step 16:</b> After restarting the configuration we can execute the SQL queries to the CSA engine and plot the graph according to data stream.
+<b>Step 16:</b>Now we can start Zeppelin for visualization. In the Data Repository we will get the  </>Drill button.<br>
 ![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step16.jpg)
+
+<b>Step 17:</b>: Now we need to configure Zeppelin. When the Trucq micro service is running, we need to collect the IP and Port from the End Point for SQL query listener.<br>
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step17.jpg)
+
+Now we need to create a new Zeppelin Note for CSA and edit the PSQL configuration with below mentioned parameters.<br>
+```postgresql.driver.name    :  org.postgresql.Driverpostgresql.max.result     : 1000postgresql.password	      : postgresql.url		      : jdbc:postgresql://10.75.161.55:1505/cqdbpostgresql.user	          : trucq
+```
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step17_1.jpg)
+
+<b>Step 18:</b> After restarting the configuration we can execute the SQL queries to the CSA engine and plot the graph according to data stream.
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step18.jpg)
 
 
 ### Things to Try
