--- a/labs/develop-stream-handler-cisco-csa/1.md
+++ b/labs/develop-stream-handler-cisco-csa/1.md
@@ -41,12 +41,10 @@ the IDE to develop the handler code.<br>
 
 <b>Step 5:</b> In the “include-handler.xml” file set the kafka Topic and Kafka Zookeeper IP and Port.<br>
 
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/imagesstep5.jpg)
+![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/images/step5.jpg)
 
-![Figure](/posts/files/develop-stream-handler-cisco-csa/assets/imagesstep5_1.jpg)
-
-
-<b>Step 6 :</b> We have create the custom Java Class in src folder. Here we named ETLHandler.<b>CsaCustomHandler --> customizations --> src --> ETLHandler.java </b>
+<b>Step 6 :</b> We have create the custom Java Class in src folder. Here we named ETLHandler.<br>
+<b>CsaCustomHandler --> customizations --> src --> ETLHandler.java </b>
 
 <b><u>Sample Coding Exercise</u></b><br>
 
