--- a/labs/word-count-using-spark/1.md
+++ b/labs/word-count-using-spark/1.md
@@ -117,21 +117,21 @@ In the terminal, use command hadoop fs –cat <font color='red'>hdfs://172.16.1.
 
 ##### An Example:
 
-<b>Input:</b><br>
+**Input:**<br>
 Welcome to DDP. This is your first program in DDP. //which is present in input file.<br>
 
-Output: <br>
+**Output:** <br>
 
 ```
-  Welcome 1
-  to 		1
-  DDP. 	2
-  This 	1
-  Is 		1
-  Your 	1
-  First 	1
-  Program 1
-  In 		1
+Welcome	1
+to	    1
+DDP. 	2
+This 	1
+Is 		1
+Your 	1
+First 	1
+Program 1
+In 		1
 ```
 
 ## Things to Try
