--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -19,7 +19,9 @@ Completion time: 30 minutes
 
 # Step 1: Explore the DLP Dev Center
 
-TODO (Add Link to DLP here)
+DLP website URL ([link](https://developer.cisco.com/))
+
+[http://10.10.10.74/DDPDevUI/demo/#/ddp/login]
 
 1. Go to Data Repository to browse data source
 1. Go to the development area by clicking Development Hub.
