--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -2,6 +2,7 @@
 
 In this Learning Lab, you will learn about how to ingest network data and transform it.  The scenario emulated is as follows.  A data collection server collects data in real time from the local network. The data collected by the server is working with a client residing in Data Learning Platform (DLP) to transfer the network data collected through Kafka. Using Kafka socket code, we are making a connection to the client and capture the network data and send it to a Kafka topic created. From this topic, data will be moved to HDFS by a consumer program. With the data present in HDFS, we can then further transform it, view it before and after the transformation in different charts such as pie chart, bar chart etc. using Tableau. The diagram shows how exactly network data flows from a local network through Kafka in HDFS and gets transformed.
 
+![alt tag](https://github.com/CiscoDevNet/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/flow1.png?raw=true)
 
 # Objective
 
@@ -28,4 +29,5 @@ DLP website URL ([link](https://developer.cisco.com/))
 1. Then create a new workspace as per the options available. whether you need Spark Java or Spark Scala, etc. (select Spark Java)
 1. Select the workspace you created, Launch IDE by clicking the Launch link.
 
-![Terminal](/posts/files/net-data-ingest-trans/assets/images/ide1.png)
+
+![alt tag](https://github.com/CiscoDevNet/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/ide1.png?raw=true)
