--- a/labs/net-data-ingest-trans/2.md
+++ b/labs/net-data-ingest-trans/2.md
@@ -1,7 +1,13 @@
 # Step 2: Developing code in IDE
 1. Go to Workspace to put your code (sample code in code-section) here.
-1. Compile and build it. Click run button, then check the build result.
-1. Run your code.
+
+
+![alt tag](https://github.com/CiscoDevNet/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/ide1.png?raw=true)
+
+1. Build the project by Selecting the Maven->Package and Clicking on Run button.
+
+![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/mavenbuild.png?raw=true)
+
 
 Click on the Terminal button to run a shell environment.
 ![Terminal](/posts/files/net-data-ingest-trans/assets/images/ide2.png)
