--- a/labs/net-data-ingest-trans/2.md
+++ b/labs/net-data-ingest-trans/2.md
@@ -3,17 +3,16 @@
 
 ![alt tag](https://github.com/CiscoDevNet/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/ide1.png?raw=true)
 
-2. Build the project by Selecting the Maven->Package and Clicking on Run button.
+1. Build the project by Selecting the Maven->Package and Clicking on Run button.
 
 ![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/build.png?raw=true)
 
-
 Click on the Terminal button to run a shell environment.
-![Terminal](/posts/files/net-data-ingest-trans/assets/images/ide2.png)
+![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/ide3.png?raw=true)
+Clicking on the above window, it will open the terminal. 
 
 1. cd target to view the package
 1. Enter the command below to run your job
-
 `HADOOP_USER_NAME=dev_1 spark-submit –master yarn –deploy-mode cluster –class TransformData /projects/spark-transform/target/transform-0.0.1-SNAPSHOT-jar-with-depencies.jar parameter1 parameter2 parameter3`
 
 `parameter1`: the data file on the hdfs we need to transform.
@@ -22,4 +21,4 @@ Click on the Terminal button to run a shell environment.
 
 Example:
 
-![Example](/posts/files/net-data-ingest-trans/assets/images/output1.png)
+![Example](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/output1.png?raw=true)
