--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -4,11 +4,12 @@ In this Learning Lab, you will learn about how to ingest network data and transf
 
 ![alt tag](https://github.com/CiscoDevNet/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/flow1.png?raw=true)
 
-# Objective
+# Lab Objectives
 
-*	Show how to get network data from the HDFS.
-*	Learn to transform network data by a given transform function.
-*	Learn how to save a file to HDFS.
+•	Show how ingest a network stream in DevNet data platform
+•	Show how to get network data from the HDFS. 
+•	Learn to transform network data by creating a transform function using IDE
+•	Learn how to save a file to HDFS and visualize data
 
 Completion time: 30 minutes
 
@@ -17,6 +18,7 @@ Completion time: 30 minutes
 *	Knowledge on Hadoop to store the network data.
 *	Studied platform user guide.
 *	Basic knowledge of how spark works.
+*	Use of Chrome OS
 
 # Step 1: Explore the DLP Dev Center
 
