--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -6,10 +6,10 @@ In this Learning Lab, you will learn about how to ingest network data and transf
 
 # Lab Objectives
 
-•	Show how ingest a network stream in DevNet data platform
-•	Show how to get network data from the HDFS. 
-•	Learn to transform network data by creating a transform function using IDE
-•	Learn how to save a file to HDFS and visualize data
+*	Show how ingest a network stream in DevNet data platform
+*	Show how to get network data from the HDFS. 
+*	Learn to transform network data by creating a transform function using IDE
+* Learn how to save a file to HDFS and visualize data
 
 Completion time: 30 minutes
 
