--- a/labs/net-data-ingest-trans/2.md
+++ b/labs/net-data-ingest-trans/2.md
@@ -3,7 +3,7 @@
 
 ![alt tag](https://github.com/CiscoDevNet/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/ide1.png?raw=true)
 
-1. Build the project by Selecting the Maven->Package and Clicking on Run button.
+1. Compile and build it. Click run button, then check the build result.
 
 ![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/build.png?raw=true)
 
