--- a/labs/net-data-ingest-trans/2.md
+++ b/labs/net-data-ingest-trans/2.md
@@ -7,9 +7,18 @@
 
 ![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/build.png?raw=true)
 
-Click on the Terminal button to run a shell environment.
-![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/ide3.png?raw=true)
-Clicking on the above window, it will open the terminal. 
+# Step 3: Run the Program
+1)	Double click run.sh to open it, change parameters as you wanted
+![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/runProgram.png?raw=true)
+
+USER: your current login user name
+INPUT: The file name in “Data Repository” that you want transform
+OUTPUT: The output file name that your code will generate.
+
+2)	Choose a Command run under Edit Commands, then click the blue button 
+![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/runbutton.png?raw=true) to run, as in the Terminal.
+![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/runProgram.png?raw=true)
+
 
 1. cd target to view the package
 1. Enter the command below to run your job
