--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -1,8 +1,10 @@
 # Network Data Ingestion and Transformation
 
-In this Learning Lab, you will learn about how to ingest network data and transform it.  The scenario emulated is as follows.  A data collection server collects data in real time from the local network. The data collected by the server is working with a client residing in Data Learning Platform (DLP) to transfer the network data collected through Kafka. Using Kafka socket code, we are making a connection to the client and capture the network data and send it to a Kafka topic created. From this topic, data will be moved to HDFS by a consumer program. With the data present in HDFS, we can then further transform it, view it before and after the transformation in different charts such as pie chart, bar chart etc. using Tableau. The diagram shows how exactly network data flows from a local network through Kafka in HDFS and gets transformed.
+A data collection server, shown in the diagram below, is collecting data in real time from the local network. The data collected by the Server is working with a Client residing in DLP to transfer the network data collected through Kafka. Using Kafka socket code, we are making a connection to the client and capture the network data and send it to a Kafka topic created. From this topic, data will be moved to HDFS by a Consumer program. With the data present in HDFS, we can then further transform it by running the program we created, visualize the data before and after the transformation in different chart format such as pie chart, bar chart etc. using Tableau. The diagram shows how exactly network data flows from a local network through Kafka in HDFS and gets transformed. 
 
 ![alt tag](https://github.com/CiscoDevNet/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/flow1.png?raw=true)
+
+In this lab, the network stream will be pre-created, so it will be available live in the platform for access. The steps for creating a network stream is as follows, but a user doesn’t need to operate these to create a stream. 
 
 # Lab Objectives
 
@@ -11,7 +13,6 @@ In this Learning Lab, you will learn about how to ingest network data and transf
 *	Learn to transform network data by creating a transform function using IDE
 * Learn how to save a file to HDFS and visualize data
 
-
 # Prerequisites
 
 *	Knowledge on Hadoop to store the network data.
@@ -19,7 +20,7 @@ In this Learning Lab, you will learn about how to ingest network data and transf
 *	Basic knowledge of how spark works.
 *	Use of Chrome OS
 
-# Step 1: Explore the DLP Dev Center
+# Step 1: Explore DLP Devevelopment Hub
 
 DLP website URL ([link](https://developer.cisco.com/))
 
