--- a/labs/net-data-ingest-trans/2.md
+++ b/labs/net-data-ingest-trans/2.md
@@ -8,7 +8,7 @@
 ![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/one.png?raw=true)
 
 # Step 3: Run the Program
-1)	Double click run.sh to open it, change parameters as you wanted
+1)	Double click run.sh to open it, change parameters as you want
 ![alt tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/runProgram.png?raw=true)
 
 * USER: your current login user name
