--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -30,3 +30,6 @@ DLP website URL ([link](https://developer.cisco.com/))
 1. Go to the development area by clicking Development Hub.
 1. Then create a new workspace as per the options available. whether you need Spark Java or Spark Scala, etc. (select Spark Java)
 1. Select the workspace you created, Launch IDE by clicking the Launch link.
+
+Select Workspace from "Development Hub". The pre-defined workspace is "wksp-transform"
+![alk-tag](https://github.com/prakdutt/data-dev-learning-labs/blob/master/labs/net-data-ingest-trans/assets/images/workspaceselection.PNG?raw=true)
