--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -6,6 +6,10 @@ A data collection server, shown in the diagram below, is collecting data in real
 
 In this lab, the network stream will be pre-created, so it will be available live in the platform for access. The steps for creating a network stream is as follows, but a user doesn’t need to operate these to create a stream. 
 
+# Lab Settings
+
+"Data Repository" section. It will allow to import network data into the HDFS environment. Few Network files are already pre-loaded. You can select one of them for further process.
+
 # Lab Objectives
 
 *	Show how ingest a network stream in DevNet data platform
