--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -23,7 +23,8 @@ In this lab, the network stream will be pre-created, so it will be available liv
 
 # Lab Settings
 
-"Data Repository" section. It will allow to import network data into the HDFS environment. Few Network files are already pre-loaded. You can select one of them for further process.
+"Data Repository" section is allowing you to create network real-time data stream. Using KafKa's Producer process, it will read data and then apply transformation on that data and push data to Consumer. Consumer process will save the transformed data into HDFS environement and from there data visualization can be applied to view the data and which can help to compare the raw input data and after transformed data. 
+N.B: You can select the pre-loaded network data for nect process.
 
 # Step 1: Explore DLP Devevelopment Hub
 
