--- a/labs/net-data-ingest-trans/1.md
+++ b/labs/net-data-ingest-trans/1.md
@@ -23,7 +23,9 @@ In this lab, the network stream will be pre-created, so it will be available liv
 
 # Lab Settings
 
-"Data Repository" section is allowing you to create network real-time data stream. Using KafKa's Producer process, it will read data and then apply transformation on that data and push data to Consumer. Consumer process will save the transformed data into HDFS environement and from there data visualization can be applied to view the data and which can help to compare the raw input data and after transformed data. 
+"Data Repository" section is allowing you to create network real-time data stream. Kafka's producer will push the Network traffic generated data to Kafka cluster and Consumer will consume that data and save that into HDFS in real-time.
+From HDFS, we can visualize the data using visualization tool. This application will allow you to use the existing Kafka's Producer & Consumer function to ingest your real time network data into HDFS environment.
+
 N.B: You can select the pre-loaded network data for nect process.
 
 # Step 1: Explore DLP Devevelopment Hub
